# DGParser

./: README.md  dg.py  dgparser.py  err.phyobj  program.py  pyproject.toml  res.phyobj  res1.phyobj  rescp.phyobj  some.py  unit_test.py
src/wisayoparser/: parser.py
tests/: res.phyobj  res.txt  res_corrupted.txt  unit_test.py
wisayoparser/: __init__.py  parser.py  tokenizer.py  tokenname.py  tokenstream.py
