[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "wisayoparser"
version = "0.0.1"
authors = [
    { name="Philex Fertich", email="philex.live@gmail.com"}
]
description = "Parser for custom domain specific language"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Unlicense"
license-files = ["LICEN[CS]E"]

[project.urls]
Homepage = "https://github.com/philexlive/WisayoParser"
Issues = "https://github.com/philexlive/WisayoParser/issues"